--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row"></div>
+            <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-5"></div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row"></div>
+            <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-5"></div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
