TASK_MAP - Added the bar chart

--- a/index.html
+++ b/index.html
@@ -2,36 +2,109 @@
 <html>
 <head>
     <title>Visokio</title>
-    <script type="text/javascript" src="http://www.amcharts.com/lib/3/ammap.js"></script>
-    <script type="text/javascript" src="http://www.amcharts.com/lib/3/maps/js/usaLow.js"></script>
+    <script type="text/javascript" src="http://www.amcharts.com/lib/3/amcharts.js"></script>
+    <script type="text/javascript" src="http://www.amcharts.com/lib/3/serial.js"></script>
     <script type="text/javascript" src="http://www.amcharts.com/lib/3/themes/none.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!--&lt;!&ndash; Latest compiled and minified JavaScript &ndash;&gt;-->
+    <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
+    <script type="text/javascript">
+
+        var data = [{
+            "country": "USA",
+            "visits": 2025
+        }, {
+            "country": "China",
+            "visits": 1882
+        }, {
+            "country": "Japan",
+            "visits": 1809
+        }, {
+            "country": "Germany",
+            "visits": 1322
+        }, {
+            "country": "UK",
+            "visits": 1122
+        }, {
+            "country": "France",
+            "visits": 1114
+        }, {
+            "country": "India",
+            "visits": 984
+        }, {
+            "country": "Spain",
+            "visits": 711
+        }, {
+            "country": "Netherlands",
+            "visits": 665
+        }, {
+            "country": "Russia",
+            "visits": 580
+        }, {
+            "country": "South Korea",
+            "visits": 443
+        }, {
+            "country": "Canada",
+            "visits": 441
+        }, {
+            "country": "Brazil",
+            "visits": 395
+        }];
+
+        var chart = AmCharts.makeChart("chartdiv", {
+            "type": "serial",
+            "theme": "none",
+            "dataProvider": data,
+            "valueAxes": [{
+                "gridColor":"#FFFFFF",
+                "gridAlpha": 0.2,
+                "dashLength": 0
+            }],
+            "gridAboveGraphs": true,
+            "startDuration": 1,
+            "graphs": [{
+                "balloonText": "[[category]]: <b>[[value]]</b>",
+                "fillAlphas": 0.8,
+                "lineAlpha": 0.2,
+                "type": "column",
+                "valueField": "visits"
+            }],
+            "chartCursor": {
+                "categoryBalloonEnabled": false,
+                "cursorAlpha": 0,
+                "zoomable": false
+            },
+            "categoryField": "country",
+            "categoryAxis": {
+                "gridPosition": "start",
+                "gridAlpha": 0,
+                "tickPosition":"start",
+                "tickLength":20
+            },
+            "exportConfig":{
+                "menuTop": 0,
+                "menuItems": [{
+                    "icon": '/lib/3/images/export.png',
+                    "format": 'png'
+                }]
+            }
+        });
+
+         
+
+    </script>
 </head>
 <body>
+<div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div class="row"></div>
-            <div class="row">
-                <div class="col-md-5"></div>
-                <div class="col-md-5"></div>
-                <div class="col-md-2"></div>
-            </div>
+            <div id="chartdiv" style="width: 100%; height: 500px;"></div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="row"></div>
-            <div class="row">
-                <div class="col-md-5"></div>
-                <div class="col-md-5"></div>
-                <div class="col-md-2"></div>
-            </div>
-        </div>
-    </div>
+</div>
 </body>
 </html>
