--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <title>Visokio</title>
     <script type="text/javascript" src="http://www.amcharts.com/lib/3/amcharts.js"></script>
     <script type="text/javascript" src="http://www.amcharts.com/lib/3/serial.js"></script>
+    <script type="text/javascript" src="http://www.amcharts.com/lib/3/pie.js"></script>
     <script type="text/javascript" src="http://www.amcharts.com/lib/3/themes/none.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://e81cf1b7627421eef53b-8c75456dc097df68b1c8f38ec2c58d11.r81.cf3.rackcdn.com/createChart.js"></script>
+    <!--<script src="http://e81cf1b7627421eef53b-8c75456dc097df68b1c8f38ec2c58d11.r81.cf3.rackcdn.com/createChart.js"></script>-->
     <script src="http://e81cf1b7627421eef53b-8c75456dc097df68b1c8f38ec2c58d11.r81.cf3.rackcdn.com/dataVar.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <!--&lt;!&ndash; Latest compiled and minified JavaScript &ndash;&gt;-->
-    <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
+            <div id="barchart" style="width: 100%; height: 500px;"></div>
+        </div>
+        <div class="col-md-6">
             <div id="chartdiv" style="width: 100%; height: 500px;"></div>
+
         </div>
     </div>
     <div class="row">
@@ -55,7 +60,79 @@
 </div>
 </body>
 <script type="text/javascript">
-    
+    $('#myTab a').click(function (e) {
+        e.preventDefault()
+        $(this).tab('show')
+    })
+    function createChart(data){
+        this.data = data;
+        var barchart = AmCharts.makeChart("barchart", {
+            "type": "serial",
+            "theme": "none",
+            "dataProvider": data,
+            "valueAxes": [{
+                "gridColor":"#FFFFFF",
+                "gridAlpha": 0.2,
+                "dashLength": 0
+            }],
+            "gridAboveGraphs": true,
+            "startDuration": 1,
+            "graphs": [{
+                "balloonText": "[[category]]: <b>[[value]]</b>",
+                "fillAlphas": 0.8,
+                "lineAlpha": 0.2,
+                "type": "column",
+                "valueField": "visits"
+            }],
+            "chartCursor": {
+                "categoryBalloonEnabled": false,
+                "cursorAlpha": 0,
+                "zoomable": false
+            },
+            "categoryField": "country",
+            "categoryAxis": {
+                "gridPosition": "start",
+                "gridAlpha": 0,
+                "tickPosition":"start",
+                "tickLength":20
+            },
+            "exportConfig":{
+                "menuTop": 0,
+                "menuItems": [{
+                    "icon": '/lib/3/images/export.png',
+                    "format": 'png'
+                }]
+            }
+        });
+        var chart = AmCharts.makeChart("chartdiv", {
+            "type": "pie",
+            "theme": "none",
+            "dataProvider": data,
+            "valueField": "visits",
+            "titleField": "country",
+            "outlineAlpha": 0.4,
+            "depth3D": 15,
+            "balloonText": "[[title]]<br><span style='font-size:14px'><b>[[visits]]</b> ([[percents]]%)</span>",
+            "angle": 30,
+            "exportConfig":{
+                menuItems: [{
+                    icon: '/lib/3/images/export.png',
+                    format: 'png'
+                }]
+            }
+        });
+        jQuery('.chart-input').off().on('input change',function() {
+            var property	= jQuery(this).data('property');
+            var target		= chart;
+            var value		= Number(this.value);
+            chart.startDuration = 0;
+            if ( property == 'innerRadius') {
+                value += "%";
+            }
+            target[property] = value;
+            chart.validateNow();
+        });
+    }
     updateView(data);
     function addData(data){
         this.data = data;
@@ -86,13 +163,17 @@
     function removeData (){
         var rmData = $('#dataToRemove').val();
         console.log(rmData);
-        if (rmData != null && rmData != "" && rmData != undefined){
+        if (rmData != null && rmData != "" && rmData != undefined ){
             if (rmData == 0){
                 data.splice(rmData,rmData + 1 );
-                updateView(data);
+                if (data.length != 0 ){
+                    updateView(data);
+                }
             } else if (rmData > 0) {
                 data.splice(rmData,rmData);
-                updateView(data);
+                if (data.length != 0 ){
+                    updateView(data);
+                }
             }
         }
     }
