--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="col-md-6">
             <form id="addData" role="form">
                 <div class="form-group">
-                    <button type="button" class="btn btn-default btn-group-justified" onclick="addData(data)">
+                    <button type="button" class="btn btn-primary btn-group-justified" onclick="addData(data)">
                         <span class="glyphicon glyphicon-plus"></span> Add
                     </button>
                 </div>
@@ -52,7 +52,7 @@
         <div class="col-md-6">
             <form id="removeData" role="form">
                 <div class="form-group">
-                    <button type="button" class="btn btn-default btn-group-justified" onclick="removeData()">
+                    <button type="button" class="btn btn-danger btn-group-justified" onclick="removeData()">
                         <span class="glyphicon glyphicon-remove"></span> Delete
                     </button>
                 </div>
